ドキュメントを更新

--- a/documents/Books/隣接リストと閉包テーブル.md
+++ b/documents/Books/隣接リストと閉包テーブル.md
@@ -1,4 +1,17 @@
-# 隣接リストと閉包テーブル
+# 隣接リストと閉包テーブル：階層データの管理手法
+
+## 目次
+1. [隣接リストとは](#隣接リストとは)
+2. [基本構造](#基本構造)
+3. [基本操作](#基本操作)
+4. [隣接リストの深刻な問題](#隣接リストの深刻な問題)
+5. [閉包テーブルでの解決](#閉包テーブルclosure-tableでの解決)
+6. [比較：隣接リスト vs 閉包テーブル](#比較隣接リスト-vs-閉包テーブル)
+7. [実用的な推奨事項](#実用的な推奨事項)
+8. [まとめ](#まとめ)
+
+## 隣接リストとは
+
 隣接リスト（Adjacency List）は、階層構造（ツリー構造）をリレーショナルデータベースで表現する最もシンプルで直感的な方法です。各ノードが自分の親ノードのIDを持つことで階層関係を表現します。
 
 ## 基本構造
@@ -389,7 +402,6 @@ WHERE descendant_id = 7;  -- 新しい親（Smartphones）
 - **データの整合性**を重視
 - **ツリー全体の操作**が多い
 
-
 ## まとめ
 
 **隣接リストの削除が難しい理由**：
@@ -401,3 +413,5 @@ WHERE descendant_id = 7;  -- 新しい親（Smartphones）
 1. CASCADE削除により関連データも自動削除
 2. 階層関係が明示的に記録されている
 3. 複雑な条件分岐が不要
+
+選択のポイントは、アプリケーションの要件（階層の深さ、削除頻度、クエリパフォーマンス）によって決まります。多くの場合、初期は隣接リストで始めて、要件が複雑になったら閉包テーブルへの移行を検討するのが現実的なアプローチです。
